added client side library bootstrap & jquery

--- a/Gk.BookStore/Gk.BookStore/Views/Home/Index.cshtml
+++ b/Gk.BookStore/Gk.BookStore/Views/Home/Index.cshtml
@@ -10,11 +10,17 @@
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     <link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
+
 </head>
 <body>
+
     <img class="logo" src="~/images/logo.jpg" alt="logo" />
-    <img src="~/mystaticfiles/prague-conference-center-1056491.jpg" class="logo"/>
-    <h1>Welcome to Bookstore application</h1>
+
+    <input type="button" value="Click me" class="btn btn-danger" />
+    <h1 class="h1">Welcome to Bookstore application</h1>
     <p>This is the home page for our book store application</p>
 </body>
+<script src="~/lib/jquery/jquery.js"></script>
+
 </html>
