--- a/Gk.BookStore/Gk.BookStore/Views/Book/GetAllBooks.cshtml
+++ b/Gk.BookStore/Gk.BookStore/Views/Book/GetAllBooks.cshtml
@@ -1,6 +1,8 @@
-﻿@using Gk.BookStore.Models
-@model IEnumerable<BookModel>
+﻿@{
+    ViewData["Title"] = "All Book";
+}
 
+@model IEnumerable<BookModel>
 
 <div class="container">
     <h1>All Books</h1>
