--- a/Gk.BookStore/Gk.BookStore/Views/Shared/_Layout.cshtml
+++ b/Gk.BookStore/Gk.BookStore/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Book store application</title>
+    <title>@ViewData["Title"] | Book store application</title>
     <link href="~/css/site.css" rel="stylesheet" />
     <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
 </head>
